<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.testapp.ui.userRegister.UserRegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_user_register" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.testapp.ui.userList.UserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_user_list" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.testapp.ui.numbers.NotificationsFragment"
        android:label="@string/title_prime_numbers"
        tools:layout="@layout/fragment_notifications" />
</navigation>